<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/image_title"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/image_title"
        app:srcCompat="@drawable/thermometer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryText"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/description_text"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/temp_hint"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_text"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:text="@string/result" />
</LinearLayout>